index: added pictureRight, changed .bullshit to .bsmessage, added postGroup, added hover effect for postGroup, edited .bsmessage hover effect, added pictureRight outline (NEEDS CORRECTION), moved .attribution further bottom right and corrected spacing/added links, added .unreadDot for unread .note (NEEDS CORRECTING)

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,8 @@ img { /* profile pictures next to name */
 }
 
 .bsmessage:hover{
+    border-radius: 7px;
+    
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 2px;
